crates/rome_cli/tests/snapshots/main_commands_format/doesnt_error_if_no_files_were_processed.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Emitted Messages

```block
Compared 0 file(s) in <TIME>
```


