crates/rome_cli/tests/snapshots/main_commands_format/format_is_disabled.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}

```

## `file.js`

```js

function f() {
return { something }
}

```

# Emitted Messages

```block
Formatted 0 file(s) in 2ms
```


