crates/rome_cli/tests/snapshots/main_commands_format/format_jsonc_files.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.jsonc`

```jsonc

/*test*/ [

/* some other comment*/1, 2, 3]
	
```

# Emitted Messages

```block
file.jsonc format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Formatter would have printed the following content:
  
    1   │ - 
    2   │ - /*test*/·[
    3   │ - 
    4   │ - /*·some·other·comment*/1,·2,·3]
    5   │ - → 
      1 │ + /*test*/·[/*·some·other·comment*/·1,·2,·3]
      2 │ + 
  

```

```block
Compared 1 file(s) in <TIME>
```


