crates/rome_cli/tests/snapshots/main_commands_format/format_stdin_with_errors.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
flags/invalid  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Missing argument stdin
  
  i Type rome format --help for more information.
  


```


