crates/rome_cli/tests/snapshots/main_commands_format/format_with_configuration.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "enabled": true,
    "lineWidth": 160,
    "indentStyle": "space",
    "indentSize": 6
  }
}

```

## `file.js`

```js
function f() {
      return { something };
}

```

# Emitted Messages

```block
Formatted 1 file(s) in 8ms
```


