crates/rome_cli/tests/snapshots/main_commands_format/formatter_lint_warning.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `format.js`

```js
for(;true;);

```

# Emitted Messages

```block
format.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Formatter would have printed the following content:
  
    1 │ for·(;·true;·);
      │    +  +     +  

```

```block
Compared 1 file(s) in <TIME>
```


